# CrapsSimulator

./: README.md
src/: CMakeLists.txt  come_out_phase.cpp  come_out_phase.h  die.cpp  die.h  main.cpp  phase.cpp  phase.h  point_phase.cpp  point_phase.h  roll.cpp  roll.h  shooter.cpp  shooter.h
test/: CMakeLists.txt  craps_test.cpp
